--- a/src/main/resources/static/dashboard/dashboard.css
+++ b/src/main/resources/static/dashboard/dashboard.css
@@ -15,26 +15,85 @@ body {
     height: 500px;
 
 }
-
+a {
+    text-decoration: none;
+    color:white;
+}
+a:hover {
+    text-decoration: underline;
+}
 #dashboard-company {
     width: 100%;
     height: 100px;
+    position: relative;
 }
 
 #dashboard-employees {
     width: 30%;
     flex-grow: 1;
+    position: relative;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
+
+
+.employee-card {
+    padding: 5px;
+    margin: 5px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.employee-card a img {
+    width: 50px;
+    height: 50px;
+}
+
+.name-wrapper {
+    flex-grow: 1;
+    width: 90%;
+    margin-bottom: 10px;
+}
+
 .visual-bar {
-    background-color: #a5a7a7; height: 20px;
+    background-color: #a5a7a7;
+    height: 20px;
+    text-align: center;
+    user-select: none;
 }
+.name-bar-wrapper {
+    flex-grow: 1;
+    width: auto;
+}
+.goal-mark {
+    background-color: #268827;
+    width: 3px;
+    height: 20px;
+    position: absolute;
+    margin-left: 80%;
+    margin-top:29px;
+}
+.goal-text {
+    font-size: 90%;
+    margin-left: 5px;
+    width: 50px;
+}
+
+.employee-underline {
+    width: 100%;
+    height: 5px;
+    background-color: #515757;
+}
+
 
 #dashboard-challenge-goals {
     width: 30%;
     flex-grow: 1;
+    position: relative;
 }
 
 #dashboard-prizes {
     width: 30%;
     flex-grow: 1;
+    position: relative;
 }
