--- a/src/main/resources/static/dashboard/dashboard.css
+++ b/src/main/resources/static/dashboard/dashboard.css
@@ -50,7 +50,6 @@ a:hover {
 }
 
 .name-wrapper {
-    flex-grow: 1;
     width: 90%;
     margin-bottom: 10px;
 }
@@ -66,12 +65,12 @@ a:hover {
     width: auto;
 }
 .goal-mark {
-    background-color: #268827;
+    background-color: #265f88;
     width: 3px;
-    height: 20px;
+    height: 100px;
     position: absolute;
     margin-left: 80%;
-    margin-top:29px;
+
 }
 .goal-text {
     font-size: 90%;
@@ -96,4 +95,37 @@ a:hover {
     width: 30%;
     flex-grow: 1;
     position: relative;
+}
+
+.prize-card {
+    padding: 5px;
+    margin: 5px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.image-wrapper img {
+    width: 90px;
+    height: 90px;
+    padding: 5px
+}
+
+.title-description-challenge-wrapper {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    width: 350px
+}
+
+.title-wrapper {
+
+}
+
+.description-wrapper {
+    background-color: #485050;
+    height: 60px;
+}
+
+.challenge-wrapper {
+
 }
