--- a/src/main/resources/static/dashboard/dashboard.css
+++ b/src/main/resources/static/dashboard/dashboard.css
@@ -114,7 +114,7 @@ a:hover {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    width: 350px
+    width: 50%
 }
 
 .title-wrapper {
