--- a/src/main/resources/static/dashboard/dashboard.css
+++ b/src/main/resources/static/dashboard/dashboard.css
@@ -17,7 +17,7 @@ body {
     margin: 10px;
     height: 500px;
     border-radius: 25px 25px 25px 25px;
-    box-shadow: 5px 10px #070606;
+    box-shadow: 5px 10px 8px #888888;
 }
 a {
     text-decoration: none;
