--- a/src/main/resources/static/dashboard/dashboard.css
+++ b/src/main/resources/static/dashboard/dashboard.css
@@ -134,18 +134,31 @@ scrollbar-width: none;  / Firefox */
     height: 60px;
 }
 #dashboard-challenge-goals {
-    width: 30%;
+    width: 20%;
     flex-grow: 1;
     position: relative;
 }
 .challenge-card {
+    display: flex;
+    margin: 20px;
+}
+
+.challenge-card a img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    margin: 5px;
+    border: solid 1px #4c58ed;
+}
+
+.challenge-name-count-wrapper {
 
 }
 
 .challenge-name {
     font-weight: bold;
     font-size: 2.0rem;
-    line-height: 3.5rem;
+    line-height: 2.0rem;
 }
 
 .challenge-count {
