--- a/src/main/resources/static/dashboard/dashboard.css
+++ b/src/main/resources/static/dashboard/dashboard.css
@@ -1,14 +1,14 @@
-body {
-    color: white;
-    background-color: #e1dcdc;
-    font-family: Clashgrotesk,Verdana,sans-serif;
-    line-height: 1.5rem;
-    overflow: hidden;
-
-}
 #dashboard-div {
     display: flex;
     flex-wrap: wrap;
+}
+
+.header {
+    text-align: center;
+    font-size: large;
+    font-weight: bold;
+    margin-top: 5px;
+    margin-bottom: 10px;
 }
 
 .dashboard-boxes {
@@ -31,6 +31,27 @@ a:hover {
     width: 100%;
     height: 100px;
     position: relative;
+    display: flex;
+}
+
+#logo {
+    margin: 10px;
+}
+
+#company-workout-div {
+    display: flex;
+}
+.workout-counters {
+    flex-grow: 1;
+    margin: 30px 5px 5px 30px;
+    font-size: 2.3rem;
+
+}
+#yearly-count {
+    color: #00de9f;
+}
+#monthly-count {
+    color: #4caaed;
 }
 
 #dashboard-employees {
@@ -41,7 +62,8 @@ a:hover {
     overflow-y: auto;
 
 }
-#dashboard-employees::-webkit-scrollbar {
+#dashboard-employees::-webkit-scrollbar,
+#dashboard-prizes::-webkit-scrollbar {
     display: none;
 }
 
@@ -103,6 +125,8 @@ scrollbar-width: none;  / Firefox */
     width: 30%;
     flex-grow: 1;
     position: relative;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .prize-card {
@@ -134,7 +158,7 @@ scrollbar-width: none;  / Firefox */
     height: 60px;
 }
 #dashboard-challenge-goals {
-    width: 20%;
+    width: 15%;
     flex-grow: 1;
     position: relative;
 }
@@ -151,16 +175,8 @@ scrollbar-width: none;  / Firefox */
     border: solid 1px #4c58ed;
 }
 
-.challenge-name-count-wrapper {
-
-}
-
 .challenge-name {
     font-weight: bold;
     font-size: 2.0rem;
     line-height: 2.0rem;
-}
-
-.challenge-count {
-
 }
