--- a/src/main/resources/static/employee/employeeDashboard.css
+++ b/src/main/resources/static/employee/employeeDashboard.css
@@ -1,43 +1,39 @@
-body {
-    font-family: Clashgrotesk,Verdana,sans-serif;
-}
-
-#employee-workout-graph {
-
-    background-color: #265f88;
-    width: 1045px;
-    height: 400px;
-    margin-bottom: 23px;
-
-
-}
-
 #graph-box {
     background-color: orange;
     margin: 20px;
-    width: 55%;
+
     padding: 40px;
 }
+
+#employee-workout-graph {
+    background-color: #265f88;
+    width: 1070px;
+    height: 400px;
+    margin-bottom: 23px;
+    margin-left: 30px;
+}
+
+
 
 #employee-workout-dates {
     flex-direction: row;
     display: flex;
+    text-align: right;
 }
 
 .date {
     font-family: Clashgrotesk,Verdana,sans-serif;
     font-size: 18px;
-    text-align: center;
+    text-align: right;
     margin: 7px 3px 5px -5px;
     line-height: 2px;
-    width: 35px;
+    width: 70px;
     height: 2px;
     transform: rotateZ(-45deg);
     transform-origin: top;
-
 }
 
 #date-wrapper {
-    flex-direction: row;
-    display: flex;
+    width: 34px;
+
 }
