--- a/src/main/resources/static/admin/admin.css
+++ b/src/main/resources/static/admin/admin.css
@@ -1,3 +1,5 @@
+
+
 #table-wrapper {
     margin: 10px;
     border: 3px solid #4c58ed;
@@ -9,7 +11,31 @@
     flex-wrap: wrap;
 }
 
-#table-wrapper img {
+#admin-top-box {
+    width: 100%;
+    height: 100px;
+    background-color: #720000;
+    display: flex;
+}
+#workout-date-interval {
+    margin: auto;
+    margin-top: 10px;
+    margin-right: 5px;
+}
+#save-date-interval {
+    float: right;
+    width: 145px;
+}
+#start-challenge-date {
+    float: right;
+    margin-left: 5px;
+}
+#end-challenge-date {
+    float: right;
+    margin-left: 5px;
+}
+
+.employee-img {
     float: left;
     width: 50px;
     height: 50px;
@@ -25,10 +51,14 @@ table, tr, td {
     background-color: #0d1c36;
     margin: 10px;
     height: 100%;
+    flex-grow: 1;
 }
 
 #date-table td {
     text-align: center;
+}
+#logo {
+    margin: 18px;
 }
 
 th {
@@ -75,6 +105,7 @@ a {
     width: 30%;
     border-radius: 25px;
     box-shadow: 5px 10px 8px #888888;
+    flex-grow: 1;
 }
 #admin-prize-box {
     width: 30%;
@@ -102,4 +133,8 @@ a {
 
 .description-wrapper {
     height: 60px;
+}
+.image-wrapper img {
+    height: 100px;
+    width: 100px;
 }
