Man kan gøre alt med prizes nu

--- a/src/main/resources/static/admin/admin.css
+++ b/src/main/resources/static/admin/admin.css
@@ -105,6 +105,8 @@ a {
     border-radius: 25px;
     box-shadow: 5px 10px 8px #888888;
     flex-grow: 1;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 #admin-prize-box {
     width: 30%;
